# travel-final-modular

./: .gitignore  README.md  a.txt  api documentation.txt  b.txt  main.py  pyproject.toml  round_booking_option_deep_search.json  temp.json  variables
.gradio/flagged/: dataset1.csv
backend/: load_data.py  main.py  utils.py
backend/agents/: travel_agent.py
backend/routers/: airports.py  flights.py  geolocation.py
backend/tools/: airports.py  flights.py
backend/transcript/: main.py
flight_responses/: airport_ahmedabad.json  airport_london.json  invalid_dates.json  modified_flights.json  no_flights.json  one_way_booking_option.json  one_way_booking_option_india.json  one_way_flights.json  payload.json  releavant_airport.json  round_boking_options_different.json  round_booking_options.json  round_booking_options_same.json  round_go_flights.json  round_go_flights_updated.json  round_return_flights.json  round_return_flights_updated.json  temp.py
frontend/: main.py  utils.py
frontend/app/: main.py
frontend/components/: ui_manager.py
shared_utils/: load_data.py  logger.py
utils/: helpers.py  logger.py
