[project]
name = "travel-git-final-modular"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.8.3",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "google-search-results>=2.4.2",
    "gradio>=5.44.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.75",
    "langchain-google-genai>=2.1.10",
    "langgraph>=0.6.7",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
